# django-outlook-email-backend

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  django_oauth2_email.py  pyproject.toml  setup.py
.github/workflows/: build.yml
django_outlook_email/: django_outlook_email_backend.py
django_outlook_email/exceptions/: microsoft_graph_exceptions.py
django_outlook_email/senders/: base_sender.py  content_types.py  json_sender.py  mime_sender.py
django_outlook_email/senders/attachments/: attachments_using_upload_session.py
django_outlook_email/senders/microsoft_requests/: microsoft_requests.py
