
[tool.poetry]
name='django-outlook-email-backend'
version='0.1'
description='Ouauth2 outlook email backend for Django'
readme = "README.md"
authors= ['Marc Claramunt']
license='MIT'
classifiers=[
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
]